# simple-back-python

./: Dockerfile  pyproject.toml
.github/workflows/: deploy-production.yml  deploy-staging.yml  deploy.yml
simple_back_python/: app.py
