[tool.poetry]
name = "simple_back_python"
version = "0.1.0"
description = "A simple FastAPI project using Poetry"
authors = ["Your Name <your.email@example.com>"]

[[tool.poetry.packages]]
include = "simple_back_python"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
